Fixed double text rendering on iOS

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@
     height: 30vh;
     background-color: #ffffffd6;
     display: flex;
+    font-weight: normal;
     flex-wrap: nowrap;
     align-items: center;
     border-radius: 10px;
@@ -102,7 +103,7 @@
   transition: transform 0.2s, box-shadow 0.2s;
   cursor: pointer;
   position: relative;
-
+  font-weight: normal;
   margin-left: auto;
   margin-right: auto;
   margin-top: 5vh
